:bug Chat Input Bar on Mobile

--- a/src/styles/_pages.chat.scss
+++ b/src/styles/_pages.chat.scss
@@ -55,7 +55,7 @@
 
 .l-chat-view {
 	@extend .u-flex-column;
-	justify-content: space-between;
+	justify-content: flex-start;
 	height: calc(100vh - 76px);
 	overflow-y: hidden;
 	&--content {
@@ -97,10 +97,13 @@
 	}
 	// Input Bar Form
 	&--input-bar {
+		position: fixed;
+		bottom: 0;
+		left: 0;
 		display: flex;
 		flex-direction: row;
 		width: 100%;
-		padding: 0 0 24px 0;
+		padding: 0;
 		textarea[name="message"],
 		button[type="submit"] {
 			width: 20%;
@@ -119,7 +122,6 @@
 		}
 		button[type="submit"] {
 			min-height: 52px;
-			height: 100%;
 			background: linear-gradient(90deg, #f72585 0%, #ff7854 100%),
 				#dadada;
 			color: white;
